--- a/TestAutomation/reports/report.html
+++ b/TestAutomation/reports/report.html
@@ -5,56 +5,37 @@
 
 <p>Test Number 1 
 
-/home/jesse/RedTeam/TestAutomation/testCasesExecutables/runAllTests.sh~ </p>
+/home/jesse/RedTeam/TestAutomation/testCases/testCase1.txt </p>
 
+PASS
 
 
 <p>Test Number 2 
 
-/home/jesse/RedTeam/TestAutomation/testCasesExecutables/Test_Case 1.py~ </p>
+/home/jesse/RedTeam/TestAutomation/testCases/testCase2.txt </p>
 
+PASS
 
 
 <p>Test Number 3 
 
-/home/jesse/RedTeam/TestAutomation/testCasesExecutables/Test_Case1.py </p>
+/home/jesse/RedTeam/TestAutomation/testCases/testCase3.txt </p>
 
+PASS
 
 
 <p>Test Number 4 
 
-/home/jesse/RedTeam/TestAutomation/testCasesExecutables/Test_Case1.py~ </p>
+/home/jesse/RedTeam/TestAutomation/testCases/testCase4.txt </p>
 
+PASS
 
 
 <p>Test Number 5 
 
-/home/jesse/RedTeam/TestAutomation/testCasesExecutables/Test_Case 2.py </p>
+/home/jesse/RedTeam/TestAutomation/testCases/testCase5.txt </p>
 
-
-
-<p>Test Number 6 
-
-/home/jesse/RedTeam/TestAutomation/testCasesExecutables/Test_Case 3.py </p>
-
-
-
-<p>Test Number 7 
-
-/home/jesse/RedTeam/TestAutomation/testCasesExecutables/Test_Case 4.py </p>
-
-
-
-<p>Test Number 8 
-
-/home/jesse/RedTeam/TestAutomation/testCasesExecutables/Test_Case 5.py </p>
-
-
-
-<p>Test Number 9 
-
-/home/jesse/RedTeam/TestAutomation/testCasesExecutables/Test_Script1.sh </p>
-
+FAIL
 
 
 </body>
